--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.google.appengine</groupId>
+                <artifactId>appengine-maven-plugin</artifactId>
+                <version>1.9.58</version>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
