--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
         <dropwizard.version>1.0.6</dropwizard.version>
         <dropwizard-swagger.version>1.0.5-2</dropwizard-swagger.version>
         <mainClass>com.rao.translate.TxService</mainClass>
+        <appengine.app.version>1</appengine.app.version>
+        <appengine.target.version>1.9.54</appengine.target.version>
+        <appengine-maven-plugin-version>1.3.1</appengine-maven-plugin-version>
     </properties>
 
     <build>
@@ -102,11 +105,16 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
-                <version>1.0.0</version>
+                <version>${appengine-maven-plugin-version}</version>
             </plugin>
         </plugins>
     </build>
     <dependencies>
+        <dependency>
+            <groupId>com.google.appengine</groupId>
+            <artifactId>appengine-api-1.0-sdk</artifactId>
+            <version>${appengine.target.version}</version>
+        </dependency>
         <dependency>
             <groupId>io.dropwizard</groupId>
             <artifactId>dropwizard-core</artifactId>
